--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,10 @@
 .nav {
   .col(@align: center);
 
-  background-color: #f6f6f6;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background-color: rgba(#f6f6f6, 90%);
   padding: 1.5rem 0;
 
   .nav-header {
